`Normalise histograms` button now only visible when viewing histograms. References issue #332

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -38,6 +38,10 @@ div.ajax-progress {
   border: none;
 }
 
+div.req-hist-norm-btn {
+  display: none;
+}
+
 div.ajax-error {
   position: fixed;
   display: none;
